--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -58,11 +58,17 @@
 	.coin-menu1:hover,.coin-menu1-current{
 		@include coinSpritePosition(0,-65,0.7)
 	}
+	.coin-menu1-disable{
+		@include coinSpritePosition(0,-130,0.7);
+	}
 	.coin-menu2{
 		@include coinSpritePosition(-79,0,0.7)
 	}
 	.coin-menu2:hover,.coin-menu2-current{
 		@include coinSpritePosition(-79,-65,0.7)
+	}
+	.coin-menu2-disable{
+		@include coinSpritePosition(-79,-130,0.7);
 	}
 	.coin-menu3{
 		@include coinSpritePosition(-158,0,0.7)
@@ -70,11 +76,17 @@
 	.coin-menu3:hover,.coin-menu3-current{
 		@include coinSpritePosition(-158,-65,0.7)
 	}
+	.coin-menu3-disable{
+		@include coinSpritePosition(-158,-130,0.7);
+	}
 	.coin-menu4{
 		@include coinSpritePosition(-237,0,0.7)
 	}
 	.coin-menu4:hover,.coin-menu4-current{
 		@include coinSpritePosition(-237,-65,0.7)
+	}
+	.coin-menu4-disable{
+		@include coinSpritePosition(-237,-130,0.7);
 	}
 	.coin-menu5{
 		@include coinSpritePosition(-316,0,0.7)
@@ -82,11 +94,17 @@
 	.coin-menu5:hover,.coin-menu5-current{
 		@include coinSpritePosition(-316,-65,0.7)
 	}
+	.coin-menu5-disable{
+		@include coinSpritePosition(-316,-130,0.7);
+	}
 	.coin-menu6{
 		@include coinSpritePosition(-395,0,0.7)
 	}
 	.coin-menu6:hover,.coin-menu6-current{
 		@include coinSpritePosition(-395,-65,0.7)
+	}
+	.coin-menu6-disable{
+		@include coinSpritePosition(-395,-130,0.7);
 	}
 	//路圖圖示區
 	//珠仔路
@@ -287,11 +305,17 @@
 	.coin-menu1:hover,.coin-menu1-current{
 		@include coinSpritePosition(0,-65,1.6)
 	}
+	.coin-menu1-disable{
+		@include coinSpritePosition(0,-130,1.6);
+	}
 	.coin-menu2{
 		@include coinSpritePosition(-79,0,1.6)
 	}
 	.coin-menu2:hover,.coin-menu2-current{
 		@include coinSpritePosition(-79,-65,1.6)
+	}
+	.coin-menu2-disable{
+		@include coinSpritePosition(-79,-130,1.6);
 	}
 	.coin-menu3{
 		@include coinSpritePosition(-158,0,1.6)
@@ -299,11 +323,17 @@
 	.coin-menu3:hover,.coin-menu3-current{
 		@include coinSpritePosition(-158,-65,1.6)
 	}
+	.coin-menu3-disable{
+		@include coinSpritePosition(-158,-130,1.6);
+	}
 	.coin-menu4{
 		@include coinSpritePosition(-237,0,1.6)
 	}
 	.coin-menu4:hover,.coin-menu4-current{
 		@include coinSpritePosition(-237,-65,1.6)
+	}
+	.coin-menu4-disable{
+		@include coinSpritePosition(-237,-130,1.6);
 	}
 	.coin-menu5{
 		@include coinSpritePosition(-316,0,1.6)
@@ -311,11 +341,17 @@
 	.coin-menu5:hover,.coin-menu5-current{
 		@include coinSpritePosition(-316,-65,1.6)
 	}
+	.coin-menu5-disable{
+		@include coinSpritePosition(-316,-130,1.6);
+	}
 	.coin-menu6{
 		@include coinSpritePosition(-395,0,1.6)
 	}
 	.coin-menu6:hover,.coin-menu6-current{
 		@include coinSpritePosition(-395,-65,1.6)
+	}
+	.coin-menu6-disable{
+		@include coinSpritePosition(-395,-130,1.6);
 	}
 	.betArea-item {
 		font-size: 2.5rem;
@@ -488,11 +524,17 @@
 	.coin-menu1:hover,.coin-menu1-current{
 		@include coinSpritePosition(0,-65,1.2)
 	}
+	.coin-menu1-disable{
+		@include coinSpritePosition(0,-130,1.2);
+	}
 	.coin-menu2{
 		@include coinSpritePosition(-79,0,1.2)
 	}
 	.coin-menu2:hover,.coin-menu2-current{
 		@include coinSpritePosition(-79,-65,1.2)
+	}
+	.coin-menu2-disable{
+		@include coinSpritePosition(-79,-130,1.2);
 	}
 	.coin-menu3{
 		@include coinSpritePosition(-158,0,1.2)
@@ -500,11 +542,17 @@
 	.coin-menu3:hover,.coin-menu3-current{
 		@include coinSpritePosition(-158,-65,1.2)
 	}
+	.coin-menu3-disable{
+		@include coinSpritePosition(-158,-130,1.2);
+	}
 	.coin-menu4{
 		@include coinSpritePosition(-237,0,1.2)
 	}
 	.coin-menu4:hover,.coin-menu4-current{
 		@include coinSpritePosition(-237,-65,1.2)
+	}
+	.coin-menu4-disable{
+		@include coinSpritePosition(-237,-130,1.2);
 	}
 	.coin-menu5{
 		@include coinSpritePosition(-316,0,1.2)
@@ -512,11 +560,17 @@
 	.coin-menu5:hover,.coin-menu5-current{
 		@include coinSpritePosition(-316,-65,1.2)
 	}
+	.coin-menu5-disable{
+		@include coinSpritePosition(-316,-130,1.2);
+	}
 	.coin-menu6{
 		@include coinSpritePosition(-395,0,1.2)
 	}
 	.coin-menu6:hover,.coin-menu6-current{
 		@include coinSpritePosition(-395,-65,1.2)
+	}
+	.coin-menu6-disable{
+		@include coinSpritePosition(-395,-130,1.2);
 	}
 	.betArea-mobile,.betArea-mobile-container{
 		height:145px;
@@ -655,11 +709,17 @@
 	.coin-menu1:hover,.coin-menu1-current{
 		@include coinSpritePosition(0,-65,0.7)
 	}
+	.coin-menu1-disable{
+		@include coinSpritePosition(0,-130,0.7);
+	}
 	.coin-menu2{
 		@include coinSpritePosition(-79,0,0.7)
 	}
 	.coin-menu2:hover,.coin-menu2-current{
 		@include coinSpritePosition(-79,-65,0.7)
+	}
+	.coin-menu2-disable{
+		@include coinSpritePosition(-79,-130,0.7);
 	}
 	.coin-menu3{
 		@include coinSpritePosition(-158,0,0.7)
@@ -667,11 +727,17 @@
 	.coin-menu3:hover,.coin-menu3-current{
 		@include coinSpritePosition(-158,-65,0.7)
 	}
+	.coin-menu3-disable{
+		@include coinSpritePosition(-158,-130,0.7);
+	}
 	.coin-menu4{
 		@include coinSpritePosition(-237,0,0.7)
 	}
 	.coin-menu4:hover,.coin-menu4-current{
 		@include coinSpritePosition(-237,-65,0.7)
+	}
+	.coin-menu4-disable{
+		@include coinSpritePosition(-237,-130,0.7);
 	}
 	.coin-menu5{
 		@include coinSpritePosition(-316,0,0.7)
@@ -679,11 +745,17 @@
 	.coin-menu5:hover,.coin-menu5-current{
 		@include coinSpritePosition(-316,-65,0.7)
 	}
+	.coin-menu5-disable{
+		@include coinSpritePosition(-316,-130,0.7);
+	}
 	.coin-menu6{
 		@include coinSpritePosition(-395,0,0.7)
 	}
 	.coin-menu6:hover,.coin-menu6-current{
 		@include coinSpritePosition(-395,-65,0.7)
+	}
+	.coin-menu6-disable{
+		@include coinSpritePosition(-395,-130,0.7);
 	}
 	.gameHistory{
 		height:130px;
@@ -923,11 +995,17 @@
 		.coin-menu1:hover,.coin-menu1-current{
 			@include coinSpritePosition(0,-65,0.6)
 		}
+		.coin-menu1-disable{
+			@include coinSpritePosition(0,-130,0.6);
+		}
 		.coin-menu2{
 			@include coinSpritePosition(-79,0,0.6)
 		}
 		.coin-menu2:hover,.coin-menu2-current{
 			@include coinSpritePosition(-79,-65,0.6)
+		}
+		.coin-menu2-disable{
+			@include coinSpritePosition(-79,-130,0.6);
 		}
 		.coin-menu3{
 			@include coinSpritePosition(-158,0,0.6)
@@ -935,11 +1013,17 @@
 		.coin-menu3:hover,.coin-menu3-current{
 			@include coinSpritePosition(-158,-65,0.6)
 		}
+		.coin-menu3-disable{
+			@include coinSpritePosition(-158,-130,0.6);
+		}
 		.coin-menu4{
 			@include coinSpritePosition(-237,0,0.6)
 		}
 		.coin-menu4:hover,.coin-menu4-current{
 			@include coinSpritePosition(-237,-65,0.6)
+		}
+		.coin-menu4-disable{
+			@include coinSpritePosition(-237,-130,0.6);
 		}
 		.coin-menu5{
 			@include coinSpritePosition(-316,0,0.6)
@@ -947,11 +1031,17 @@
 		.coin-menu5:hover,.coin-menu5-current{
 			@include coinSpritePosition(-316,-65,0.6)
 		}
+		.coin-menu5-disable{
+			@include coinSpritePosition(-316,-130,0.6);
+		}
 		.coin-menu6{
 			@include coinSpritePosition(-395,0,0.6)
 		}
 		.coin-menu6:hover,.coin-menu6-current{
 			@include coinSpritePosition(-395,-65,0.6)
+		}
+		.coin-menu6-disable{
+			@include coinSpritePosition(-395,-130,0.6);
 		}
 }	
 @media screen and (max-width: 320px) {
@@ -1109,11 +1199,17 @@
 	.coin-menu1:hover,.coin-menu1-current{
 		@include coinSpritePosition(0,-65,0.5)
 	}
+	.coin-menu1-disable{
+		@include coinSpritePosition(0,-130,0.5);
+	}
 	.coin-menu2{
 		@include coinSpritePosition(-79,0,0.5)
 	}
 	.coin-menu2:hover,.coin-menu2-current{
 		@include coinSpritePosition(-79,-65,0.5)
+	}
+	.coin-menu2-disable{
+		@include coinSpritePosition(-79,-130,0.5);
 	}
 	.coin-menu3{
 		@include coinSpritePosition(-158,0,0.5)
@@ -1121,11 +1217,17 @@
 	.coin-menu3:hover,.coin-menu3-current{
 		@include coinSpritePosition(-158,-65,0.5)
 	}
+	.coin-menu3-disable{
+		@include coinSpritePosition(-158,-130,0.5);
+	}
 	.coin-menu4{
 		@include coinSpritePosition(-237,0,0.5)
 	}
 	.coin-menu4:hover,.coin-menu4-current{
 		@include coinSpritePosition(-237,-65,0.5)
+	}
+	.coin-menu4-disable{
+		@include coinSpritePosition(-237,-130,0.5);
 	}
 	.coin-menu5{
 		@include coinSpritePosition(-316,0,0.5)
@@ -1133,11 +1235,17 @@
 	.coin-menu5:hover,.coin-menu5-current{
 		@include coinSpritePosition(-316,-65,0.5)
 	}
+	.coin-menu5-disable{
+		@include coinSpritePosition(-316,-130,0.5);
+	}
 	.coin-menu6{
 		@include coinSpritePosition(-395,0,0.5)
 	}
 	.coin-menu6:hover,.coin-menu6-current{
 		@include coinSpritePosition(-395,-65,0.5)
+	}
+	.coin-menu6-disable{
+		@include coinSpritePosition(-395,-130,0.5);
 	}
 	.card-container{
 		margin-top: -35px;
