--- a/src/assets/css/scss/components/_loading.scss
+++ b/src/assets/css/scss/components/_loading.scss
@@ -7,7 +7,7 @@
 .gameResultLoading{
     // left:25%;
     top:35%;
-    background-color: #523e25;
+    background-color: #523e2575;
     z-index: 9;
     // transform: translateX(-50%);
     p{
