--- a/src/assets/css/scss/components/_loading.scss
+++ b/src/assets/css/scss/components/_loading.scss
@@ -5,7 +5,7 @@
     z-index: 10;
 }
 .gameResultLoading{
-    // left:25%;
+    // top:44%;
     top:35%;
     background-color: #523e2575;
     z-index: 9;
