--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -16,10 +16,13 @@
 @import './scss/components/bettingArea';
 @import './scss//components/gameResult';
 @import './scss/components/historyRoad';
+@import './scss/components/beadPlate';
+@import './scss/components/sideRoad';
 @import './scss//components/loading';
 @import './scss/components/poker';
 @import './scss/components//counter';
 @import './scss/components/userBetInfo';
+
 //rwd
 @import './scss/rwd/rwd';
 	
