--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1202,6 +1202,8 @@ a.btn.disabled, fieldset[disabled] a.btn {
 
 .LoadingPage {
   background-image: url("../../images/loading.svg");
+  background-position: center center;
+  background-repeat: no-repeat;
   background-color: #644d31;
   text-align: center;
   z-index: 10;
