--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -2805,13 +2805,13 @@ a.btn.disabled, fieldset[disabled] a.btn {
     background-position: -32px 4px;
     background-size: 64px auto;
   }
-  cockroach-red {
+  .cockroach-red {
     width: 4px;
     height: 4px;
     background-position: -52px 0px;
     background-size: 64px auto;
   }
-  cockroach-blue {
+  .cockroach-blue {
     width: 4px;
     height: 4px;
     background-position: -60px 0px;
@@ -3539,13 +3539,13 @@ a.btn.disabled, fieldset[disabled] a.btn {
     background-position: -16px 2px;
     background-size: 32px auto;
   }
-  cockroach-red {
+  .cockroach-red {
     width: 2px;
     height: 2px;
     background-position: -26px 0px;
     background-size: 32px auto;
   }
-  cockroach-blue {
+  .cockroach-blue {
     width: 2px;
     height: 2px;
     background-position: -30px 0px;
