--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1160,11 +1160,19 @@ a.btn.disabled, fieldset[disabled] a.btn {
 .BigEyesRoad-colum {
   width: 2.272727272727%;
   height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .BigEyesRoad-item {
   width: 100%;
   height: 16.666666666%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .sideWidth {
@@ -1193,11 +1201,19 @@ a.btn.disabled, fieldset[disabled] a.btn {
 .smallRoad-column, .cockroachRoad-column {
   width: 5%;
   height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .smallRoad-item, .cockroachRoad-item {
   width: 100%;
   height: 16.6666666666%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .LoadingPage {
