--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -11,6 +11,7 @@
 @import './scss/layout/mainGame';
 @import './scss/layout/footer';
 //component
+@import './scss//components/leave';
 @import './scss/components/buttom';
 @import './scss/components/coin';
 @import './scss/components/bettingArea';
