--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -268,6 +268,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+		min-width: 150px;
 	}
 	.header-userName{
 		flex-grow: 0;
@@ -375,11 +376,11 @@
 	  }
 	  .playerNum{
 		left:20%;
-		top:50%;
+		top:10%;
 	  }
 	  .bankerNum{
 		right:20%;
-		top:50%;
+		top:10%;
 	  }
 	  	//珠仔路
 	.BeadPlate-B{  //莊
@@ -586,11 +587,11 @@
 	}
 	  .playerNum{
 		left:10%;
-		top:50%;
+		top:10%;
 	  }
 	  .bankerNum{
 		right:10%;
-		top:50%;
+		top:10%;
 	  }
 	//珠仔路
 	.BeadPlate-B{  //莊
@@ -890,6 +891,9 @@
 		.header-userName{
 			font-size: 0.5rem;
 		}
+		.header-bottom{  
+			min-width: 100px;
+		}
 		.video-box{
 			height:220px;
 		}
@@ -928,11 +932,11 @@
 		}
 		.playerNum{
 			left:5%;
-			top:50%;
+			top:10%;
 		}
 		.bankerNum{
 			right:5%;
-			top:50%;
+			top:10%;
 		}
 		.caritem{
 			margin-right: 10px;
@@ -979,12 +983,8 @@
 		.betArea-mobile-container{
 			height:179px;
 		}
-		.gameResult{
-			top:20%;
-		}
 		.playerNum{
 			left:3%;
-			top:50%;
 		}
 		.userBetInfo-title{
 			font-size: 1rem;
