--- a/src/assets/css/scss/components/_buttom.scss
+++ b/src/assets/css/scss/components/_buttom.scss
@@ -29,7 +29,10 @@
 	box-shadow: 0px 0px 0px #9e9e9e;
 	// transition: 1s;
 }
-
+.header-btn.active,header-btn.active.focus,.header-btn.active:focus,.header-btn.focus,.header-btn:active.focus,.header-btn:active:focus,.header-btn:focus{
+	background-color: brown;
+    border: black 2px solid;
+}
 .header-btn.active.focus,.header-btn.active:focus,.header-btn.focus,.header-btn:active.focus,.header-btn:active:focus,.header-btn:focus{
 	outline: thin dotted;
 	outline: 5px auto -webkit-focus-ring-color;
