--- a/src/assets/css/scss/layout/_header.scss
+++ b/src/assets/css/scss/layout/_header.scss
@@ -4,12 +4,6 @@
 	flex-direction: column;
 	justify-content: space-between;
 }
-.header-logo{
-	margin-left: auto;
-	margin-right: auto;
-	padding-top: 10px;
-	padding-bottom: 10px;
-}
 .header-btnList{
 	float: left;
 	width: 100%;
@@ -19,4 +13,8 @@
 }
 .header-top{
 	width:100%;
+}
+.header-bottom-mobil-extend{
+	left:0;
+	right:0;
 }
