--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -218,6 +218,18 @@
 @media screen and (max-width: 1140px) {
 	
 }
+@media screen and (min-width: 1025px) {
+	.header-bottom-mobil{
+		display: none !important;
+	}
+	.header-logo{
+		max-width: 187px;
+		margin-left: auto;
+		margin-right: auto;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+}
 @media screen and (max-width: 1024px) {
 	.container-waps{
 		height:auto;
@@ -231,7 +243,7 @@
   }
 	.header{
 		width: 100%;
-		height: 100px;
+		height: 50px;
 		flex-direction: row;
 		justify-content: space-around;
 	}
@@ -243,9 +255,8 @@
 		float: left;
 		width: auto !important;
 		height:100%;
-		margin-left: 1.25rem;
-		padding-top: 5px;
-		padding-bottom: 0px;
+		margin-right: auto;
+
 		img{
 			height:100%;
 		}
@@ -253,7 +264,6 @@
 	.header-btnList{
 		width: auto;
 		display: flex;
-		justify-content: space-around;
 	}
 	.header-btn{
 		width:auto;
@@ -264,11 +274,14 @@
 		display: flex;
 	}
 	.header-bottom{  
-		// display: none;
 		display: flex;
-		flex-direction: column;
 		justify-content: center;
-		min-width: 150px;
+	}
+	.header-bottom-desk{
+		display: none;
+	}
+	.userWallet-mobil{
+		display: block !important;
 	}
 	.header-userName{
 		flex-grow: 0;
@@ -484,9 +497,9 @@
 	}
 }
 @media screen and (max-width: 768px) {
-	.header{
-		height:70px;
-	}
+	// .header{
+	// 	height:70px;
+	// }
 	.header-btn{
 		line-height:2.75rem;
 	}
@@ -681,16 +694,12 @@
 	}
 }
 @media screen and (max-width: 540px) {
-	.header{
-		height:50px;
-	}
-
 	.header-btn{
 		font-size:150%;
 		line-height: 1.5rem;
 	}
 	.video-box{
-		height:288px;
+		height:238px;
 	}
 	#countNumber{
 		top:3%;
@@ -878,12 +887,15 @@
 		top:25%;
 		font-size: 40%;
 	}
-		.header{
-			height:50px;
-		}
-		.header-btnList{
-			width: 57%;
-		}
+	.header-top{
+		width:80%;
+	}
+	.header-bottom{
+		width:20%;
+	}
+	.header-btnList{
+		width: 80%;
+	}
 		.header-btn{
 			line-height: 1.75rem;
 			font-size: 130%;;
@@ -891,11 +903,8 @@
 		.header-userName{
 			font-size: 0.5rem;
 		}
-		.header-bottom{  
-			min-width: 115px;
-		}
 		.video-box{
-			height:220px;
+			height:170px;
 		}
 		#countNumber{
 			top:2%;
@@ -963,13 +972,16 @@
 }
 @media screen and (max-width: 375px) {
 	.header-logo{  //暫時性的，之後得拿掉!!!!!
-		width:25% !important;
+		width:10% !important;
+	}
+	.header{
+		height:40px;
 	}
 	.header-btnList{
-		width:60% !important;
+		width:90% !important;
 	}
 		.video-box{
-			height:195px;
+			height:155px;
 		}
 		.header-btnList{
 			width: 49%;
@@ -1052,7 +1064,7 @@
 }	
 @media screen and (max-width: 320px) {
 	.header{
-		height:40px;
+		height:30px;
 	}
 	.header-userName{
 		line-height:0.7rem;
@@ -1077,7 +1089,7 @@
 		padding-bottom: 0px;
 	}
 	.video-box{
-		height:165px;
+		height:125px;
 	}
 	.gameHistory{
 		height:100px;
