--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-.roadImg-preLoad, .BeadPlate-B, .BeadPlate-B-BPair, .BeadPlate-B-PPair, .BeadPlate-B-BothPair, .BeadPlate-P, .BeadPlate-P-BPair, .BeadPlate-P-PPair, .BeadPlate-P-BothPair, .BeadPlate-T, .BeadPlate-T-BPair, .BeadPlate-T-PPair, .BeadPlate-T-BothPair, .big-B, .big-B-BPair, .big-B-PPair, .big-B-BothPair, .big-BT, .big-BT-BPair, .big-BT-PPair, .big-BT-BothPair, .big-P, .big-P-BPair, .big-P-PPair, .big-P-BothPair, .big-PT, .big-PT-BPair, .big-PT-PPair, .big-PT-BothPair, .small-red, .small-blue, .bigEye-red, .bigEye-blue, .cockroach-red, .cockroach-blue {
+.roadImg-preLoad, .BeadPlate-B, .BeadPlate-B-BPair, .BeadPlate-B-PPair, .BeadPlate-B-BothPair, .BeadPlate-P, .BeadPlate-P-BPair, .BeadPlate-P-PPair, .BeadPlate-P-BothPair, .BeadPlate-T, .BeadPlate-T-BPair, .BeadPlate-T-PPair, .BeadPlate-T-BothPair, .big-B, .big-B-BPair, .big-B-PPair, .big-B-BothPair, .big-BT, .big-BT-BPair, .big-BT-PPair, .big-BT-BothPair, .big-P, .big-P-BPair, .big-P-PPair, .big-P-BothPair, .big-PT, .big-PT-BPair, .big-PT-PPair, .big-PT-BothPair, .small-red, .small-blue, .bigEye-red, .bigEye-blue, .cockroach-red, .cockroach-blue, .small-red-ask, .small-blue-ask, .bigEye-red-ask, .bigEye-blue-ask, .cockroach-red-ask, .cockroach-blue-ask {
   cursor: pointer;
   background-image: url("../../images/road-sprite.png");
 }
@@ -1040,6 +1040,48 @@ a.btn.disabled, fieldset[disabled] a.btn {
   background-size: 160px auto;
 }
 
+.small-red-ask {
+  width: 10px;
+  height: 10px;
+  background-position: -120px 0px;
+  background-size: 160px auto;
+}
+
+.small-blue-ask {
+  width: 10px;
+  height: 10px;
+  background-position: -140px 0px;
+  background-size: 160px auto;
+}
+
+.bigEye-red-ask {
+  width: 11px;
+  height: 11px;
+  background-position: 0px 11px;
+  background-size: 176px auto;
+}
+
+.bigEye-blue-ask {
+  width: 11px;
+  height: 11px;
+  background-position: -88px 11px;
+  background-size: 176px auto;
+}
+
+.cockroach-red-ask {
+  width: 10px;
+  height: 10px;
+  background-position: -130px 0px;
+  background-size: 160px auto;
+}
+
+.cockroach-blue-ask {
+  width: 10px;
+  height: 10px;
+  background-position: -150px 0px;
+  background-size: 160px auto;
+}
+
 .beadPlate {
   width: 40%;
   /*調整欄寬 */
@@ -1861,7 +1903,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .video-box {
     width: 100%;
-    height: 545px;
+    height: 575px;
   }
   .mainGame {
     width: 100%;
@@ -1878,10 +1920,10 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .betArea-mobile {
     display: block;
-    height: 280px;
+    height: 250px;
   }
   .betArea-mobile-container {
-    height: 280px;
+    height: 250px;
   }
   .coin-menu1 {
     width: 126.4px;
@@ -2216,11 +2258,14 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 @media screen and (max-width: 768px) {
+  .header {
+    height: 40px;
+  }
   .header-btn {
     line-height: 2.75rem;
   }
   .video-box {
-    height: 385px;
+    height: 430px;
   }
   .lightBox {
     display: block;
@@ -2228,11 +2273,8 @@ a.btn.disabled, fieldset[disabled] a.btn {
   #countNumber {
     top: 2%;
   }
-  .betArea-mobile {
-    height: 180px;
-  }
-  .betArea-mobile-container {
-    height: 180px;
+  .bettingArea-btn {
+    height: 55px;
   }
   .tabsArea {
     display: none;
@@ -2358,7 +2400,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .betArea-mobile,
   .betArea-mobile-container {
-    height: 145px;
+    height: 120px;
   }
   .betArea-item {
     font-size: 1.6rem;
@@ -2548,12 +2590,15 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 @media screen and (max-width: 540px) {
+  .header {
+    height: 30px;
+  }
   .header-btn {
     font-size: 150%;
     line-height: 1.5rem;
   }
   .video-box {
-    height: 238px;
+    height: 290px;
   }
   #countNumber {
     top: 3%;
@@ -2567,7 +2612,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .betArea-mobile,
   .betArea-mobile-container {
-    height: 130px;
+    height: 100px;
   }
   .coin-menu1 {
     width: 55.3px;
@@ -2905,13 +2950,13 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .header-btn {
     line-height: 1.75rem;
-    font-size: 130%;
+    font-size: 100%;
   }
   .header-userName {
     font-size: 0.5rem;
   }
   .video-box {
-    height: 170px;
+    height: 230px;
   }
   #countNumber {
     top: 2%;
@@ -2927,21 +2972,27 @@ a.btn.disabled, fieldset[disabled] a.btn {
     height: 15%;
   }
   .betArea {
-    height: 355px;
+    height: 310px;
   }
   .betStatus {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
   .betArea-mobile {
-    height: 211px;
+    height: 180px;
   }
   .betArea-mobile-container {
-    height: 211px;
+    height: 180px;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
+  .navbar-toggler {
+    padding: 0;
+  }
+  .bettingArea-btn-gitbackAllCoin {
+    width: 55px;
+  }
   .betArea-item {
-    font-size: 1.2rem;
+    font-size: 1rem;
     -webkit-box-flex: 1;
         -ms-flex: auto;
             flex: auto;
@@ -2985,35 +3036,32 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 @media screen and (max-width: 375px) {
-  .header-logo {
-    width: 10% !important;
-  }
-  .header {
-    height: 40px;
-  }
   .header-btnList {
     width: 90% !important;
   }
   .video-box {
-    height: 155px;
+    height: 210px;
   }
   .header-btnList {
     width: 49%;
   }
   .betArea {
-    height: 315px;
+    height: 265px;
   }
   .betStatus {
-    font-size: 1.1rem;
+    font-size: 0.8rem;
   }
   .alertFont {
-    font-size: 1.3rem !important;
+    font-size: 1rem !important;
+  }
+  .betArea-item {
+    font-size: 0.8rem;
   }
   .betArea-mobile {
-    height: 179px;
+    height: 141px;
   }
   .betArea-mobile-container {
-    height: 179px;
+    height: 141px;
   }
   .playerNum {
     left: 3%;
@@ -3158,7 +3206,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
     padding-bottom: 0px;
   }
   .video-box {
-    height: 140px;
+    height: 180px;
   }
   .gameHistory {
     height: 100px;
@@ -3170,7 +3218,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
     font-size: 130%;
   }
   .betArea {
-    height: 270px;
+    height: 230px;
   }
   .bettingArea-btn {
     height: 50px;
@@ -3185,10 +3233,10 @@ a.btn.disabled, fieldset[disabled] a.btn {
     font-size: 1rem;
   }
   .betArea-mobile {
-    height: 150px;
+    height: 117px;
   }
   .betArea-mobile-container {
-    height: 150px;
+    height: 117px;
   }
   .card-container {
     margin-top: -35px;
@@ -3282,6 +3330,42 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .userBetInfo-title {
     font-size: 0.5rem;
+  }
+  .small-red-ask {
+    width: 8px;
+    height: 8px;
+    background-position: -96px 0px;
+    background-size: 128px auto;
+  }
+  .small-blue-ask {
+    width: 8px;
+    height: 8px;
+    background-position: -112px 0px;
+    background-size: 128px auto;
+  }
+  .bigEye-red-ask {
+    width: 8px;
+    height: 8px;
+    background-position: 0px 8px;
+    background-size: 128px auto;
+  }
+  .bigEye-blue-ask {
+    width: 8px;
+    height: 8px;
+    background-position: -64px 8px;
+    background-size: 128px auto;
+  }
+  .cockroach-red-ask {
+    width: 8px;
+    height: 8px;
+    background-position: -104px 0px;
+    background-size: 128px auto;
+  }
+  .cockroach-blue-ask {
+    width: 8px;
+    height: 8px;
+    background-position: -120px 0px;
+    background-size: 128px auto;
   }
 }
 
