--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -10,7 +10,11 @@
 @import './scss/layout/header';
 @import './scss/layout/mainGame';
 @import './scss/layout/footer';
+@import './scss/layout/tableInfo';
 //component
+@import './scss/components/liveVideo';
+@import './scss/components/progressBar';
+@import './scss/components/lightBox';
 @import './scss//components/leave';
 @import './scss/components/buttom';
 @import './scss/components/coin';
