--- a/src/assets/css/scss/components/_userBetInfo.scss
+++ b/src/assets/css/scss/components/_userBetInfo.scss
@@ -25,3 +25,14 @@
         color: yellow;
     }
 }
+.modal-header{
+    background-color:#644d31;
+}
+.modal-body{
+    color:black;
+    text-align: center;
+}
+.userBetInfo{
+    list-style: none;
+    text-align: left;
+}
