--- a/src/assets/css/scss/components/_bettingArea.scss
+++ b/src/assets/css/scss/components/_bettingArea.scss
@@ -37,6 +37,7 @@
         border-top:gray 1px solid;
     }
     .bettingArea-btn-gitbackAllCoin{
+        height:42px;
         width:100px;
         border-radius: 5px;
         background-color: grey;
