--- a/src/assets/css/scss/layout/_footer.scss
+++ b/src/assets/css/scss/layout/_footer.scss
@@ -22,3 +22,14 @@
 	margin-right: 5px;
 	margin-left: 5px;
 }
+.input-emoji{
+	right:10px;
+	top:0;
+}
+.chat-input{
+	max-width: 200px;
+	min-width: 100px;
+	input{
+		border-radius: 44px;
+	}
+}
