--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -819,6 +819,11 @@
   .betArea-mobile-container {
     height: 100px;
   }
+  .askRoad-player,.askRoad-banker{
+    p{
+        font-size: 0.5rem
+    }
+}
   .coin-menu1 {
     @include coinSpritePosition(0, 0, 0.7);
   }
@@ -1028,10 +1033,10 @@
     font-size: 40%;
   }
   .header-top {
-    width: 80%;
+    width: 90%;
   }
   .header-bottom {
-    width: 20%;
+    width: 10%;
   }
   .header-btnList {
     width: 80%;
