--- a/src/assets/css/scss/layout/_mainGame.scss
+++ b/src/assets/css/scss/layout/_mainGame.scss
@@ -29,7 +29,7 @@
 	float: left;
 	width: 35%;
 	// background-image: url(../../images/Stand-bg.jpg);
-	background-color: #0f4d79;
+	background-color: #0d679b;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center top;
