//修改路圖圖片

--- a/src/assets/css/scss/layout/_mainGame.scss
+++ b/src/assets/css/scss/layout/_mainGame.scss
@@ -28,8 +28,7 @@
 	border: 1px solid #262626;
 	float: left;
 	width: 35%;
-	// background-image: url(../../images/Stand-bg.jpg);
-	background-color: #0d679b;
+	background-color: #02478d;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center top;
