--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -241,7 +241,7 @@ img {
   border: 1px solid #262626;
   float: left;
   width: 35%;
-  background-color: #0d679b;
+  background-color: #02478d;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
